-Grabbing a few quick css tweaks from scott. -Fixing fixture initial_data -Adding plain list style and applying it in a few places

--- a/actions/templates/actions/action_detail.html
+++ b/actions/templates/actions/action_detail.html
@@ -44,7 +44,7 @@
             <h3>Who's doing this?</h3>
             <span class='total_users'>{{ action.users_completed }}</span> pe{{ action.users_completed|pluralize:"rson has,ople have" }} completed this action.<br/>
             {% if action.users_completed %}
-                <ul>
+                <ul class="plain_list">
                     {% for user in users_completed %}
                         <li>{% safe_user_link user %}</li>
                     {% endfor %}
@@ -55,7 +55,7 @@
             {% endif %}
             <span class='total_users'>{{ action.users_committed }}</span> pe{{ action.users_committed|pluralize:"rson has,ople have" }} committed to this action.<br/>
             {% if action.users_committed %}
-                <ul>
+                <ul class="plain_list">
                     {% for user in users_committed %}
                         <li>{% safe_user_link user %}</li>
                     {% endfor %}
