added an rsvp cancel view so one can cancel out of rsvping on the rsvp confirmation page

--- a/events/templates/events/rsvp_confirm.html
+++ b/events/templates/events/rsvp_confirm.html
@@ -9,7 +9,8 @@
                 <form action="{% url event-rsvp-confirm event.id %}" method="post">
                     {% include "events/_form.html" %}
                     {% csrf_token %}
-                    <input type="submit" value="Confirm RSVP" />
+                    <input type="submit" value="Confirm RSVP" /> |
+                    <a href="{% url event-rsvp-cancel event.id %}">cancel</a>
                 </form>
         </div>
         <div class="box_three_bottom"></div>
