--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,7 +83,7 @@ input, select, textarea {
     font-family: "superclarendon-1", "superclarendon-2", serif;
     font-weight: 700;
     font-style: normal; }
-form ul { list-style-type: none; }
+form ul { margin-left: 0px; padding-left: 0px; list-style: none;}
 form input[type="checkbox"] { width: 15px; }
 a.button:hover { color: white; }
 .form_row {
@@ -226,7 +226,7 @@ Corners Corners Corners Corners Corners Corners Corners Corners Corners Corners 
 .box_one_middle, .box_two_middle, .box_three_middle,
 .box_one_bottom, .box_two_bottom, .box_three_bottom {margin-left:-5px; position:relative;}
 .box_one_top, .box_two_top, .box_three_top {margin-top:10px;}
-.box_one_middle, .box_two_middle, .box_three_middle {height:100%; padding:0px 23px 0px 18px; overflow:auto;}
+.box_one_middle, .box_two_middle, .box_three_middle {height:100%; padding:0px 23px 0px 23px; overflow:auto;}
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Navigation Navigation Navigation Navigation Navigation Navigation Navigation Navigation Navigation Navigation Navigation 
@@ -284,6 +284,8 @@ Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Ton
     padding: 18px;
     -moz-border-radius-bottomleft: 18px; -webkit-border-bottom-left-radius: 18px; border-bottom-left-radius: 18px; -moz-border-radius-bottomright: 18px; -webkit-border-bottom-right-radius: 18px; border-bottom-right-radius: 18px; }
 #tongue a {color: #FFF;}
+#tongue h3 {color: #333;}
+#tongue a {width:100%;}
 /* logged in tongue */
 #tongue .gravatar {margin-bottom:18px;}
 #tongue_username {font-size: 18px; font-weight:bold; }
@@ -501,7 +503,7 @@ Events Events Events Events Events Events Events Events Events Events Events Eve
 #event_form ul { margin: 0 0 0 0; }
 .event_help_text { font-size: 12px; color: grey; }
 #edit_event_link { float: right; }
-#event_map { width: 400px; height: 200px; }
+#event_map { width: 431px; height: 200px; }
 .event_inline_placeholder { color: grey; font-style: italic; }
 .editable_highlight { background-color: #ffff99; cursor: text; }
 #commitment_card { width: 400px; padding: 5px; border: 1px solid black; }
