--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
     <head>
         {% load dated_static %}
-        <title>{% block title %}Repower at Home{% endblock %}</title>
+        <title>{% block title %}Repower at Home | Save energy at home and organize your community{% endblock %}</title>
         <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
         <meta name="msvalidate.01" content="DC928E84A1569AF4933A7DB431C08DB4" />
         <meta name="y_key" content="9d9c6c76735e5a92"/>
