Moving house party dialog to events page and restructuring the text.

--- a/events/templates/events/list.html
+++ b/events/templates/events/list.html
@@ -10,20 +10,16 @@
     <div class="box_two_middle">
         <h1>Host an energy meeting</h1>
         <p>
-            You’ve already demonstrated your commitment to a cleaner world. 
-            <b>Now it’s time to magnify your impact by hosting an energy meeting.</b>
-        </p>
-        <p>
             Energy meetings let you introduce your friends, coworkers, and neighbors to the 
-            benefits of saving energy. These fun events teach participants about a few key 
+            benefits of saving energy. These fun events teach participants about key 
             energy actions and get them excited about saving energy as a team. 
         </p>
         <p>
-            <b>You don’t have to be an expert in energy efficiency to host an event.</b> 
             Repower at Home will provide all the materials you need. 
+            <b>You don’t have to be an expert in energy efficiency to host an event.</b> 
         </p>
+        <h3>Who would I invite?</h3>
         <p>
-            <i>But I don’t know whom to invite!</i><br />
             You’re already plugged into many networks: your office, your children’s school, 
             your bowling team, and so on. Who isn’t interested in cleaner air and better homes? 
             Many hosts are unsure in the beginning, but find it easy to develop a guest list of 
@@ -38,16 +34,29 @@
     </div>
     <div class="box_two_bottom"></div>
 </div>
+<div class="grid_3 omega">
     {% if user.is_authenticated and my_events %}
-        <div class="grid_3 omega">
-            <div class="box_one_top"></div>
-            <div class="box_one_middle">
-                <h3>Your Events</h3>
-                {% with my_events as events %}
-                    {% include "events/_event_nugget_list.html" %}
-                {% endwith %}
-            </div>
-            <div class="box_one_bottom"></div>
-        </div>
+    <div class="box_one_top"></div>
+    <div class="box_one_middle">
+        <h3>Your Events</h3>
+        {% with my_events as events %}
+            {% include "events/_event_nugget_list.html" %}
+        {% endwith %}
+    </div>
+    <div class="box_one_bottom"></div>
     {% endif %}
+    <div class="box_one_top"></div>
+    <div class="box_one_middle">
+        <h3>Need some help?</h3>
+        <p>
+            If you would like to talk to a real person about hosting an energy meeting you can 
+            <a href="mailto:field@repowerathome.com?subject=Hosting%20an%20energy%20meeting">send us an email</a> or we can 
+            <a href="{% url house_party %}" id='house_party_link' rel="nofollow">give you a call</a>. 
+        </p>
+    </div>
+    <div class="box_one_bottom"></div>
+</div>
+
+{% include "rah/_house_party_dialog.html" %}
 {% endblock %}
+{% block js %}page_event_list{% endblock %}
