--- a/static/css/style.css
+++ b/static/css/style.css
@@ -957,8 +957,8 @@ JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI
 .ui-button { 
     font-family:"superclarendon-1", "superclarendon-2", serif !important;
     font-weight:700;
+    font-size: 14px;
     font-style: normal;
-/*    text-transform: uppercase;*/
     display: inline-block; position: relative; padding: 0; margin-right: .1em; text-decoration: none !important; cursor: pointer; text-align: center; zoom: 1; overflow: visible; } /* the overflow property removes extra width in IE */
 .ui-button-icon-only { width: 2.2em; } /* to make room for the icon, a width needs to be set here */
 button.ui-button-icon-only { width: 2.4em; } /* button elements seem to need a little more width */
