--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -12,7 +12,7 @@
         </p>
         <h3>How it works</h3>
         <p>
-            Earn points for completing actions. Every point you earn means one less pound of coal is burned.
+            You earn points by completing <a href="{% url action_show %}">actions</a>. Every point you earn means one less pound of coal needs to be burned.
         </p> 
         <p class="center">
             <a href="{% url register %}" class="button" id="home_page_join_button">Join the Challenge</a><br/>
