--- a/static/css/style.css
+++ b/static/css/style.css
@@ -267,7 +267,7 @@ Footer Footer Footer Footer Footer Footer Footer Footer Footer Footer Footer Foo
 /* ---------------------------------------------------------------------------------------------------------------------
 Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage Homepage
 --------------------------------------------------------------------------------------------------------------------- */
-#home_page_join_button {font-size:24px; text-shadow:none; margin-bottom:9px; width:100%;}
+#home_page_join_button {font-size:24px; text-shadow:none; margin-bottom:9px; width:100%; text-shadow: #333 1px 1px 1px;}
 #home_page_numbers {text-align:center; line-height:22px; position:absolute; top:30px; left:400px; width:200px; font-style: italic;}
 #home_page_numbers div {color:#ed6623; font-size:18px; font-weight:bold; line-height:18px;}
 #home_page_header {
@@ -965,6 +965,7 @@ JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI
     font-weight:700;
     font-size: 14px;
     font-style: normal;
+    text-shadow: #333 1px 1px 1px;
     display: inline-block; position: relative; padding: 0; margin-right: .1em; text-decoration: none !important; cursor: pointer; text-align: center; zoom: 1; overflow: visible; } /* the overflow property removes extra width in IE */
 .ui-button-icon-only { width: 2.2em; } /* to make room for the icon, a width needs to be set here */
 button.ui-button-icon-only { width: 2.4em; } /* button elements seem to need a little more width */
