--- a/templates/rah/_house_party_dialog.html
+++ b/templates/rah/_house_party_dialog.html
@@ -2,7 +2,7 @@
     <form action="{% url rah.views.house_party %}" method="post" id="house_party_form">
         <p>
             We're happy to talk to you about hosting an energy meeting. Give us your phone number and one of our
-            organizers will give you call.
+            organizers will give you a call.
         </p>
         <div>
             {{house_party_form.as_p}}
