removing 0 points from magnify

--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -133,8 +133,7 @@
         <h3>Magnify your Impact</h3>
         {% activity_by_slug mag_invite_friend as invite_friend_act %}
         <p>
-            <a href='{% url invite-invite %}' class='invite_friend_link'>Invite a friend to this team</a><br/>
-            <span class="smaller">{{ invite_friend_act.points }} points</span>
+            <a href='{% url invite-invite %}' class='invite_friend_link'>Invite a friend to this team</a>
         </p>
         <div id='invite_friend_dialog'>
             {% get_invite_form for group %}
