--- a/rateable/templates/rateable/form.html
+++ b/rateable/templates/rateable/form.html
@@ -8,7 +8,7 @@
                         id="id_score_{{ form.id }}_{{ forloop.counter0 }}"
                         class="score_radio"
                         {% if id == form.initial_score %}checked="checked"{% endif %} />
-                    <label for="id_score_{{ form.id }}_{{ forloop.counter0 }}">
+                    <label class="tooltip" for="id_score_{{ form.id }}_{{ forloop.counter0 }}" title="{{ label }}">
                         <span class="icon_rate_{{ id }}"></span>
                     </label>
                 </li>
