--- a/events/templates/events/_details.html
+++ b/events/templates/events/_details.html
@@ -30,6 +30,7 @@
 <div>
     <h3>Where</h3>
     <p>
+        {% if event.place_name %}<span>{{ event.place_name }}</span><br />{% endif %}
         <span id="event_address">{{ event.where }}</span><br />
         <span id="event_location">{{ event.location }}</span>
     </p>
