--- a/static/css/style.css
+++ b/static/css/style.css
@@ -510,7 +510,8 @@ Events Events Events Events Events Events Events Events Events Events Events Eve
 .event_inline_placeholder { color: grey; font-style: italic; }
 .editable_highlight { background-color: #ffff99; cursor: text; }
 #commitment_card { width: 400px; padding: 5px; border: 1px solid black; }
-#commitment_table { margin-bottom: 18px; }
+#commitment_card ul { margin-left: 18px; }
+.commitment_table { margin-bottom: 18px; }
 #attendee_list { float: right; font-weight: bold; clear: both; margin-right: 40px; }
 #attendee_list ul { margin-left: 0; padding-left: 5px; }
 .active_attendee { font-weight: bold; font-size: 16px; }
