--- a/events/templates/events/_details.html
+++ b/events/templates/events/_details.html
@@ -24,6 +24,15 @@
     </p>
 </div>
 <div>
+    <h3>How Many</h3>
+    <p>
+        Were invited: {{ event.invited }}<br />
+        Are confirmed: {{ event.confirmed_guests }}<br />
+        Are not sure: {{ event.maybe_attending_count }}<br />
+        Can't make it: {{ event.not_attending_count }}<br />
+    </p>
+</div>
+<div>
     <h3>When</h3>
     <p>{{ event.when|date:"LONG_DATE_FORMAT" }} at {{ event.start|time }}</p>
 </div>
